--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,6 @@
 # .env.template
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
-FLASK_SECRET_KEY=
+SPOTIFY_REDIRECT_URI=
+FLASK_SECURE_COOKIE=
+REDIS_HOST=
