--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,9 @@ jobs:
           cat <<EOF > ~/Playlister/.env
           SPOTIFY_CLIENT_ID=${{ secrets.SPOTIFY_CLIENT_ID }}
           SPOTIFY_CLIENT_SECRET=${{ secrets.SPOTIFY_CLIENT_SECRET }}
-          FLASK_SECRET_KEY=${{ secrets.FLASK_SECRET_KEY }}
+          SPOTIFY_REDIRECT_URI=${{ secrets.SPOTIFY_REDIRECT_URI }}
+          FLASK_SECURE_COOKIE=true
+          REDIS_HOST=redis
           EOF
 
       - name: Build + Restart Docker
